--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 server:
-  port: 9001
+#  port: 9001
+  port: 0
 
 spring:
   application:
     name: user-service
 
 eureka:
+  instance:
+#    만약 port 가 0(random) 인경우 구분하기위해
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
   client:
 #    eureka server 등록 -> client 들은 server 에 등록하여 사용
     register-with-eureka: true
