feat(filter): apigateway filter 적용 방법

--- a/apigateway-service/build.gradle
+++ b/apigateway-service/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//m1 macbook 에서 생기는 err -> 별다른 영향은 없지만 안보이긴 위해선 넣어주는게 좋다
+	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
 }
 
 dependencyManagement {
