--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -17,9 +17,15 @@ spring:
           uri: http://localhost:8081/
           predicates:
             - Path=/first-service/**
+          filters:
+            - AddRequestHeader=first-request, first-request-headerYml
+            - AddResponseHeader=first-response, first-response-headerYml
         - id: second-service
           uri: http://localhost:8082/
           predicates:
             - Path=/second-service/**
+          filters:
+            - AddRequestHeader=second-request, second-request-headerYml
+            - AddResponseHeader=second-response, second-response-headerYml
 
 
