feat(filter): Logging filter 적용 방법

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -34,7 +34,12 @@ spring:
           filters:
             - AddRequestHeader=second-request, second-request-headerYml
             - AddResponseHeader=second-response, second-response-headerYml
-            - CustomFilter
+            - name: CustomFilter
+            - name: LoggingFilter
+              args:
+                baseMessage: Hi, there. Logging Filter
+                preLogger: true
+                postLogger: true
 
 
 
