--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -27,6 +27,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	// https://mvnrepository.com/artifact/com.h2database/h2
 	implementation 'com.h2database:h2'
