--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
             preLogger: true
             postLogger: true
       routes:
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/**
         - id: first-service
 #          uri: http://localhost:8081/
 #          위랑 다르게 설정하는 이유는 eureka 의 등록된 이름으로 바꿀 수 있다.
