feat(catalog-service): catalog-service lb 및 기능 개발

--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -47,6 +47,10 @@ spring:
                 baseMessage: Hi, there. Logging Filter
                 preLogger: true
                 postLogger: true
+        - id: catalog-service
+          uri: lb://CATALOG-SERVICE
+          predicates:
+            - Path=/catalog-service/**
 
 
 
