--- a/orderservice/src/main/resources/application.yml
+++ b/orderservice/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: catalog-service
+    name: order-service
   h2:
     console:
       enabled: true
@@ -27,14 +27,14 @@ spring:
 
 eureka:
   instance:
-    #    만약 port 가 0(random) 인경우 구분하기위해
+    #    ?? port ? 0(random) ??? ??????
     #    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
-    #    eureka server 등록 -> client 들은 server 에 등록하여 사용
+    #    eureka server ?? -> client ?? server ? ???? ??
     register-with-eureka: true
     fetch-registry: true
-    #    server 의 위치를 등록
+    #    server ? ??? ??
     service-url:
       defaultZOne : http://localhost:8761/eureka
 
