--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -35,7 +35,7 @@ eureka:
     fetch-registry: true
 #    server 의 위치를 등록
     service-url:
-      defaultZOne : http://localhost:8761/eureka
+      defaultZone : http://localhost:8761/eureka
 
 
 greeting:
